[gd_scene load_steps=10 format=3 uid="uid://uij42thge1m2"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_bgdbb"]
[ext_resource type="Script" uid="uid://d1n5jle7lq5bi" path="res://ui/battle_prep_new/item_detailed_info/weapon_detailed_info.gd" id="2_0w8q6"]
[ext_resource type="FontFile" uid="uid://dr2pggbgbnye0" path="res://resources/fonts/m6x11.ttf" id="3_2jgc7"]
[ext_resource type="PackedScene" uid="uid://dfaqp8a7p4td4" path="res://ui/battle_prep_new/unit_detailed_info/weapon_icon_container.tscn" id="3_xvemf"]
[ext_resource type="PackedScene" uid="uid://bcteldqbxn7l0" path="res://ui/battle_prep_new/item_detailed_info/weapon_stat_container.tscn" id="4_6v2xw"]
[ext_resource type="FontFile" uid="uid://bukl6c1gyp51f" path="res://resources/fonts/m5x7.ttf" id="4_644mu"]

[sub_resource type="Theme" id="Theme_trk22"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_wgwh4"]
default_font_size = 12

[sub_resource type="Theme" id="Theme_6j0ny"]
default_font_size = 14

[node name="WeaponDetailedInfo" type="Panel"]
custom_minimum_size = Vector2(250, 460)
layout_direction = 2
offset_top = 1.0
offset_right = 250.0
offset_bottom = 461.0
theme = ExtResource("1_bgdbb")
script = ExtResource("2_0w8q6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 251.0
offset_bottom = 459.0
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 14

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme = SubResource("Theme_trk22")
theme_override_fonts/font = ExtResource("3_2jgc7")
theme_override_font_sizes/font_size = 32
text = "Item Name"

[node name="ItemTypeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_wgwh4")

[node name="ItemTypeHeader" type="Label" parent="MarginContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item Type"

[node name="-" type="Label" parent="MarginContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
text = "-"

[node name="ItemType" type="Label" parent="MarginContainer/VBoxContainer/ItemTypeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item type"

[node name="FullWeaponIconContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainWeaponIconContainer" parent="MarginContainer/VBoxContainer/FullWeaponIconContainer" instance=ExtResource("3_xvemf")]
layout_mode = 2

[node name="MundaneWeaponIconContainer" parent="MarginContainer/VBoxContainer/FullWeaponIconContainer" instance=ExtResource("3_xvemf")]
layout_mode = 2

[node name="MagicWeaponIconContainer" parent="MarginContainer/VBoxContainer/FullWeaponIconContainer" instance=ExtResource("3_xvemf")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="ItemDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(221, 72)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_6j0ny")
theme_override_fonts/font = ExtResource("4_644mu")
theme_override_font_sizes/font_size = 16
text = "Example description goes here, this box should be able to wrap and hold a fair amount of text for all differnt item types. If this text is being shown, there is an error."
autowrap_mode = 3
clip_text = true

[node name="WeaponStatContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_6v2xw")]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 174.0
offset_top = 43.0
offset_right = 238.0
offset_bottom = 107.0

[node name="PriceLabel" type="Label" parent="ItemIcon"]
modulate = Color(0.899619, 0.69149, 0, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -15.0
offset_right = 58.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "50G"
